--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
