--- a/package.json
+++ b/package.json
@@ -7,19 +7,31 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "next build",
+    "nexus-typegen": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only ./graphql/schema.ts",
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@prisma/client": "^4.2.1",
+    "apollo-server-micro": "^3.10.1",
+    "graphql": "^16.5.0",
+    "micro-cors": "^0.1.1",
     "next": "12.2.5",
+    "nexus": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.12.0",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "18.7.3",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
