--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,6 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": "error",
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error"
+    "prettier/prettier": "error"
   }
 }
