--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@prisma/client": "^4.2.1",
-    "apollo-server-micro": "^3.10.1",
+    "apollo-server-micro": "^3.10.2",
+    "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-ws": "^5.10.1",
     "micro-cors": "^0.1.1",
     "next": "12.2.5",
     "nexus": "^1.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.12.0",
