--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "typeRoots": ["./types"]
   },
   "include": [
     "next-env.d.ts",
@@ -26,5 +27,5 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
 }
