--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-server-micro": "^3.10.2",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-relay": "^0.10.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.10.1",
     "micro-cors": "^0.1.1",
