--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 DATABASE_URL=""
+
+AUTH0_SECRET='...' # run `openssl rand -hex 32` to generate a 32 bytes value
+AUTH0_BASE_URL='http://localhost:3000'
+AUTH0_ISSUER_BASE_URL='https://YOUR_APP_DOMAIN'
+AUTH0_CLIENT_ID='YOUR_CLIENT_ID'
+AUTH0_CLIENT_SECRET='YOUR_CLIENT_SECRET'
+AUTH0_HOOK_SECRET='' # run `openssl rand -hex 32` to generate a 32 bytes value
