--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Public Environment variables that can be used in the browser.
+NEXT_PUBLIC_HOSTNAME=localhost
+NEXT_PUBLIC_PORT=3000
+
+# Secret environment variables only available to Node.js
 DATABASE_URL=""
 
 AUTH0_SECRET='...' # run `openssl rand -hex 32` to generate a 32 bytes value
